samples/_failures_safe/1761278208_639b7c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_695e2c2e.c: In function ‘main’:
./samples/SAFE/__tmp_695e2c2e.c:154:20: error: missing terminating " character
  154 |             printf("Decompressed data (%zu bytes):\
      |                    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_695e2c2e.c:154:13: error: expected expression at end of input
  154 |             printf("Decompressed data (%zu bytes):\
      |             ^~~~~~
./samples/SAFE/__tmp_695e2c2e.c:154:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_695e2c2e.c:154:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_695e2c2e.c:154:13: error: expected declaration or statement at end of input
